--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,11 @@
 Package: bayesecopop
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
-Authors@R: 
-    person(given = "First",
-           family = "Last",
-           role = c("aut", "cre"),
-           email = "first.last@example.com")
-Description: What the package does (one paragraph).
-License: What license it uses
+Title: Bayesian Mixture Modeling of Ecological Populations
+Version: 0.1.0
+Author: Saptarshi Chakraborty, Samuel W.K. Wong
+Maintainer: Saptarshi Chakraborty <chakra.saptarshi@gmail.com>
+Description: More about what it does (maybe more than one line)
+    Use four spaces when indenting paragraphs within the Description.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Biarch: true
@@ -17,7 +15,9 @@ Imports:
     methods,
     Rcpp (>= 0.12.0),
     rstan (>= 2.18.1),
-    rstantools (>= 2.0.0)
+    rstantools (>= 2.0.0),
+    glue,
+    BAMBI (>= 2.0.0)
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
@@ -25,3 +25,4 @@ LinkingTo:
     rstan (>= 2.18.1),
     StanHeaders (>= 2.18.0)
 SystemRequirements: GNU make
+RoxygenNote: 6.1.1
