--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     rstan (>= 2.18.1),
     rstantools (>= 2.0.0),
     glue,
-    BAMBI (>= 2.0.0)
+    BAMBI (>= 2.0.0),
+    magrittr
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
